sink: Update the shaders to work with Cogl 1.6.0+ and GLES2

The GLES2 shaders were considered private API until 1.6.0, see
discussion:
  https://bugzilla.gnome.org/show_bug.cgi?id=661071

Let's update the variable names and depend on 1.6.0